--- a/WPFLoLAPI/ChampionInfoWindow.xaml
+++ b/WPFLoLAPI/ChampionInfoWindow.xaml
@@ -10,6 +10,7 @@
         <StackPanel>
             <TextBlock x:Name="TxtName" FontSize="24" FontWeight="Bold" />
             <TextBlock x:Name="TxtTitle" FontSize="16" FontStyle="Italic" Margin="0,0,0,15" />
+            <TextBlock x:Name="TxtBlurb" FontSize="16" FontStyle="Italic" Margin="0,0,0,15" />
 
             <TextBlock x:Name="TxtAttack" FontSize="14" Margin="0,2,0,2"/>
             <TextBlock x:Name="TxtDefense" FontSize="14" Margin="0,2,0,2"/>
